# capstone_q4_django

./: .env.example  .gitignore  Procfile  README.md  db.sqlite3  insominia_export.json  pyproject.toml  requirements.txt
address/: models.py  serializers.py  views.py
address/migrations/: 0001_initial.py
brand/: admin.py  models.py  serializers.py  views.py
brand/migrations/: 0001_initial.py  0002_alter_brand_name_alter_brand_site.py
category/: models.py  serializers.py  views.py
category/migrations/: 0001_initial.py
mercado/: permissions.py  settings.py  urls.py
products/: models.py  serializers.py  views.py
products/migrations/: 0001_initial.py
purchase/: admin.py  models.py  serializers.py  views.py
purchase/migrations/: 0001_initial.py  0002_initial.py  0003_alter_purchase_status.py
static/: staticfiles.json
user/: models.py  permissions.py  serializers.py  serilizers.py  views.py
user/migrations/: 0001_initial.py  0002_rename_user_uuid_user_id.py  0003_rename_id_user_user_uuid.py  0004_auto_20220602_1949.py  0005_alter_user_email_alter_user_first_name.py
