[tool.poetry]
name = "cap_django"
version = "0.1.0"
description = "API para mercado virtual do zé"
authors = ["Felipe Silveira <felipelarson@msn.com>", "Matheus Burei <burei@email.com>", "Smilly D. <smilly@email.com>", "Matheus Gomes <mgomes@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework-simplejwt = "^5.2.0"
drf-spectacular = "^0.22.1"
gunicorn = "^20.1.0"
Markdown = "^3.3.7"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
