[tool.poetry]
name = "cap_django"
version = "0.1.0"
description = "API para mercado virtual do zé"
authors = ["Felipe Silveira <felipelarson@msn.com>", "Matheus Burei <burei@email.com>", "Smilly D. <smilly@email.com>", "Matheus Gomes <mgomes@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.4"
djangorestframework-simplejwt = "5.2.0"
drf-spectacular = "0.22.1"
gunicorn = "20.1.0"
Markdown = "^3.3.7"
django-filter = "^21.1"
asgiref = "3.5.2"
attrs = "21.4.0"
black = "22.3.0"
click = "8.1.3"
djangorestframework = "3.13.1"
flake8 = "4.0.1"
inflection = "0.5.1"
isort = "5.10.1"
jsonschema = "4.5.1"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
pathspec = "0.9.0"
platformdirs = "2.5.2"
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
pyrsistent = "0.18.1"
pytz = "2022.1"
PyYAML = "6.0"
sqlparse = "0.4.2"
tomli = "2.0.1"
uritemplate = "4.1.1"
whitenoise = "6.1.0"
PyJWT = "2.4.0"
django-cors-headers = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
